Updates to fix https://github.com/openshift/origin/issues/3119#event-329305636 - better differentiate between 'waiting/pending' vs 'running' states where we display this in the ui.
Switch/add .spinner icon from patternfly where build.status.phase and pod.status.phase status is pending on builds, pods and overview pages
Also, wrapped content on builds and pods pages into 2 column layout within .tiles for better presentation by using available space
Include UI screenshots for Ashesh

--- a/assets/app/styles/_components.less
+++ b/assets/app/styles/_components.less
@@ -293,6 +293,17 @@
   }
 }
 
+.build-log, .pod-log {
+  overflow: hidden;
+  margin-bottom: 10px;
+  .log-meta {
+    margin-bottom: 3px;
+    .log-meta-title {
+      margin-right: 10px;
+    }
+  }
+}
+
 .animate-repeat.ng-move,
 .animate-repeat.ng-enter,
 .animate-repeat.ng-leave {
